# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  readme.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20230626140557_add_status_to_subscriptions.sql  20230626144651_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
