[package]
name = "zero2prod"
version = "0.1.0"
authors = ["jeeva<jeeva.ramu@codurance.com>"]
edition = "2021"

[lib]
path="src/lib.rs"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1.0.159", features = ["derive"] }
