[package]
name = "zero2prod"
version = "0.1.0"
authors = ["jeeva<jeeva.ramu@codurance.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
secrecy = { version = "0.8", features = ["serde"] }
tracing = {version = "0.1.37", features = ["log"]}
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
log = "0.4.17"
env_logger = "0.10.0"
config = "0.13.0"
actix-web = "4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
